--- a/Alfa.csproj
+++ b/Alfa.csproj
@@ -43,6 +43,7 @@
     <Reference Include="DevExpress.XtraGrid.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraLayout.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraPrinting.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraVerticalGrid.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -113,6 +114,15 @@
     <Compile Include="SplashScreen1.Designer.cs">
       <DependentUpon>SplashScreen1.cs</DependentUpon>
     </Compile>
+    <Compile Include="TelefonRehberi.cs">
+      <DependentUpon>Alfa.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TelRehber.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TelRehber.Designer.cs">
+      <DependentUpon>TelRehber.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tema.cs">
       <DependentUpon>Alfa.tt</DependentUpon>
     </Compile>
@@ -133,6 +143,12 @@
     </Compile>
     <Compile Include="YeniNot.Designer.cs">
       <DependentUpon>YeniNot.cs</DependentUpon>
+    </Compile>
+    <Compile Include="YeniTelefonKisi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="YeniTelefonKisi.Designer.cs">
+      <DependentUpon>YeniTelefonKisi.cs</DependentUpon>
     </Compile>
     <Compile Include="Yonetim.cs">
       <SubType>Form</SubType>
@@ -162,6 +178,9 @@
     <EmbeddedResource Include="SplashScreen1.resx">
       <DependentUpon>SplashScreen1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="TelRehber.resx">
+      <DependentUpon>TelRehber.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TemaSec.resx">
       <DependentUpon>TemaSec.cs</DependentUpon>
     </EmbeddedResource>
@@ -170,6 +189,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="YeniNot.resx">
       <DependentUpon>YeniNot.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="YeniTelefonKisi.resx">
+      <DependentUpon>YeniTelefonKisi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Yonetim.resx">
       <DependentUpon>Yonetim.cs</DependentUpon>
